# tae_kim_anki

./: LICENSE  README.md  main.py  out.csv  pyproject.toml
tae_kim_anki/: __main__.py
