[tool.poetry]
name = "tae-kim-anki"
version = "0.1.0"
description = "Script to generate an anki deck from examples in A Guide to Japanese Grammar by Tae Kim"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tae_kim_anki"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
